css/style.css
/* ... */
.portfolio-item img {
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
  position: relative;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.portfolio-item:hover img {
  -webkit-transform: scale(1.09);
  -ms-transform: scale(1.09);
  transform: scale(1.09);
}

.portfolio-item, .blog-item {
  display: block;
  overflow: hidden;
  position: relative;
}

.portfolio-item .overlay, .blog-item .overlay {
  position: relative;
  z-index: 8;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
}

.portfolio-item .overlay, .portfolio-item .overlay:before, .blog-item .overlay, .blog-item .overlay:before {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.portfolio-item .overlay:before, .blog-item .overlay:before {
  background: rgba(0, 0, 0, 0.5);
  content: "";
}

.portfolio-item .wrap-icon, .blog-item .wrap-icon {
  position: absolute;
  right: 20px;
  color: #fff;
  top: 20px;
}

.portfolio-item .portfolio-item-content, .blog-item .portfolio-item-content {
  position: absolute;
  bottom: 20px;
  left: 20px;
  right: 20px;
}

.portfolio-item .portfolio-item-content h3, .portfolio-item .portfolio-item-content p, .blog-item .portfolio-item-content h3, .blog-item .portfolio-item-content p {
  color: #fff;
  margin: 0;
  padding: 0;
}

.portfolio-item .portfolio-item-content h3, .blog-item .portfolio-item-content h3 {
  font-size: 18px;
}

.portfolio-item .portfolio-item-content p, .blog-item .portfolio-item-content p {
  font-size: 12px;
  color: rgba(255, 255, 255, 0.5);
  font-family: "Arimo", sans-serif;
}

.portfolio-item:hover .overlay, .blog-item:hover .overlay {
  opacity: 1;
  visibility: visible;
}

.blog-item {
  margin-left: 0 !important;
}

.blog-item .overlay {
  opacity: 1;
  visibility: visible;
}

.blog-item:hover .overlay {
  opacity: 0;
  visibility: hidden;
}

.filter-wrap {
  position: relative;
}

.filter-wrap .filter {
  font-size: 14px;
  color: #fff;
}

.filter-wrap .filter a {
  margin-left: 10px;
  color: rgba(255, 255, 255, 0.5);
}

.filter-wrap .filter a:hover {
  color: #fff;
}

.filter-wrap .filter a.active {
  color: #fff;
}

@media (max-width: 991.98px) {
  .filter-wrap .filter {
    background: #000;
    z-index: 9;
    position: absolute;
    min-width: 150px;
    opacity: 0;
    visibility: hidden;
    -webkit-transition: .3s all ease;
    -o-transition: .3s all ease;
    transition: .3s all ease;
    right: 0;
    padding: 20px;
    top: 10px;
    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
    border-radius: 4px;
  }
  .filter-wrap .filter.active {
    opacity: 1;
    visibility: visible;
  }
  .filter-wrap .filter a {
    display: block;
  }
}

/* Isotope Transitions
------------------------------- */
.isotope,
.isotope .item {
  -webkit-transition-duration: 0.8s;
  -moz-transition-duration: 0.8s;
  -ms-transition-duration: 0.8s;
  -o-transition-duration: 0.8s;
  transition-duration: 0.8s;
}

.isotope {
  -webkit-transition-property: height, width;
  -moz-transition-property: height, width;
  -ms-transition-property: height, width;
  -o-transition-property: height, width;
  transition-property: height, width;
}

.isotope .item {
  -webkit-transition-property: -webkit-transform, opacity;
  -moz-transition-property: -moz-transform, opacity;
  -ms-transition-property: -ms-transform, opacity;
  -o-transition-property: top, left, opacity;
  -webkit-transition-property: opacity, -webkit-transform;
  transition-property: opacity, -webkit-transform;
  -o-transition-property: transform, opacity;
  transition-property: transform, opacity;
  transition-property: transform, opacity, -webkit-transform;
}

.unslate_co--section {
  padding: 3.5rem 0;
}

@media (max-width: 767.98px) {
  .unslate_co--section {
    padding: 2rem 0;
  }
}

.unslate_co--section a:hover {
  color: #fff;
}

.heading-h2 {
  font-size: 32px;
  color: #fff;
  font-weight: 900;
}

.heading-h2.divider:before {
  position: absolute;
  content: "";
}

.heading-h3 {
  font-size: 26px;
  font-weight: 900;
  color: #fff;
}

.lead {
  font-size: 18px;
  line-height: 30px;
}

.relative {
  position: relative;
}

figure.dotted-bg {
  position: relative;
}

figure.dotted-bg:before {
  z-index: -1;
  content: "";
  position: absolute;
  bottom: -50px;
  right: -50px;
  width: 268px;
  height: 224px;
  background-image: url("../images/dotted_light.png");
  background-repeat: no-repeat;
}

@media (max-width: 991.98px) {
  figure.dotted-bg:before {
    right: 0px;
  }
}

.gutter-v1 {
  margin-right: -1px !important;
  margin-left: -1px !important;
}

@media (max-width: 991.98px) {
  .gutter-v1 {
    margin-left: -15px !important;
    margin-right: -15px !important;
  }
}

.gutter-v1 > .col,
.gutter-v1 > [class*="col-"] {
  padding-right: 1px !important;
  padding-left: 1px !important;
}

@media (max-width: 991.98px) {
  .gutter-v1 > .col,
  .gutter-v1 > [class*="col-"] {
    padding-right: 15px !important;
    padding-left: 15px !important;
  }
}

.gutter-v2 {
  margin-right: -2px !important;
  margin-left: -2px !important;
}

@media (max-width: 991.98px) {
  .gutter-v2 {
    margin-left: -15px !important;
    margin-right: -15px !important;
  }
}

.gutter-v2 > .col,
.gutter-v2 > [class*="col-"] {
  margin-bottom: 4px;
  padding-right: 2px !important;
  padding-left: 2px !important;
}

@media (max-width: 991.98px) {
  .gutter-v2 > .col,
  .gutter-v2 > [class*="col-"] {
    padding-right: 15px !important;
    padding-left: 15px !important;
  }
}

.gutter-v3 {
  margin-left: -60px !important;
  margin-right: -60px !important;
}

@media (max-width: 991.98px) {
  .gutter-v3 {
    margin-left: -15px !important;
    margin-right: -15px !important;
  }
}

.gutter-v3 > .col,
.gutter-v3 > [class*="col-"] {
  padding-right: 60px !important;
  padding-left: 60px !important;
}
/* ... */

